--- a/r2q2_Dice_Throw/index.html
+++ b/r2q2_Dice_Throw/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="container">
-      <div class="box">0</div>
+      <div class="box" id="left">0</div>
 
-      <div>Result:<span>0</span></div>
+      <div>Result:<span id="result">0</span></div>
 
-      <div class="box">0</div>
-      
+      <div class="box" id="right">0</div>
+
     </div>
-    <button>Roll</button>
+    <button id="btnRoll">Roll</button>
     <script src="index.js"></script>
   </body>
 </html>
