--- a/r2q3_Transfer_Money/index.html
+++ b/r2q3_Transfer_Money/index.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>repl.it</title>
-    <link href="index.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <div id="container">
-      <div class="box">
-        <div>Account Balance</div>
-        <div id="account">0</div>
-      </div>
-      <button>Transfer $10 >>></button>
-      <button><<< Transfer $10</button>
-      <div class="box" id="wallet">
-        <div>Wallet Balance</div>
-        <div id="other-wallet">0</div>
-      </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>repl.it</title>
+  <link href="index.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div id="container">
+    <div class="box">
+      <div>Account Balance</div>
+      <div id="account">0</div>
     </div>
-    <script src="index.js"></script>
-  </body>
+    <button id="transfer10ToWallet">Transfer $10 >>></button>
+    <button id="transfer10ToAccount">
+      <<< Transfer $10</button>
+        <div class="box" id="wallet">
+          <div>Wallet Balance</div>
+          <div id="other-wallet">0</div>
+        </div>
+  </div>
+
+  <!-- <div id="container"> -->
+  <input type="text" id="amount">
+  <button id="spendBtn">Spend</button>
+  <!-- </div> -->
+  <script src="index.js"></script>
+</body>
+
 </html>
